@@ -1,5 +1,8 @@
 TODO
 	* : Support multi-monitor setup
+2024-02-28
+	* src/server.c: Adding internal function to turn output on/off
+	* util/simplewc-msg.c: turn output on/off by `simplewc-msg --set --output (on|off)`
 
 2024-02-27
 	* meson.build: Adding support for meson/ninja building
